# hundred-and-ten-serverless

./: .dockerignore  .funcignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  docker-compose.test.yml  docker-compose.yml  function_app.py  host.json  pyproject.toml
.context/compound-engineering/ce-code-review/20260424-130145-5c565eeb/: api-contract.json  correctness.json  kieran-python.json  maintainability.json  performance.json  (+1 more)
.github/: dependabot.yml
.github/workflows/: coverage.yaml  deploy-production.yml  deploy-staging.yml  lint.yaml
.infrastructure/: .terraform.lock.hcl  function.tf  github.tf
.sisyphus/: boulder.json
.sisyphus/evidence/: F1-plan-compliance.txt  F2-code-quality.txt  F4-override-justification.txt  F4-scope-fidelity.txt  task-1-replica-set-init.txt  task-1-replica-set-restart.txt  task-10-game-tests.txt  task-11-user-tests.txt  task-12-all-tests-pass.txt  task-12-black.txt  task-12-coverage.txt  task-12-full-tests-final.txt  task-12-full-tests.txt  task-12-pylint.txt  task-12-ruff.txt  task-12-tests-after-revert.txt  task-2-pytest-asyncio-install.txt  task-3-abstract-check.txt  task-3-serialize-v0.txt  task-4-elematch-lobby.txt  task-4-import-check.txt  task-5-no-old-code.txt  task-6-transaction-pattern.txt  task-7-user-async.txt  task-8-beanie-fixture.txt  task-8-function-tests-ok.txt  task-9-lobby-tests.txt
.sisyphus/evidence/final-qa/: VERDICT.txt  edge-case-output.txt  edge_case_qa.py  integration-create-lobby-to-game.txt  integration-test-output.txt  integration-test.py  integration_test.py  pytest-full-run.txt  qa-summary.txt  task-specific-output.txt  task_specific_qa.py
.sisyphus/notepads/beanie-migration/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: beanie-migration.md
_tests/decorators/: test_game_exception_handler.py
_tests/functions/: test_lobby_game.py  test_login.py  test_playing_game.py  test_retrieve_info.py
_tests/mappers/: test_mapper_edge_cases.py
docs/brainstorms/: event-derivation-refactor-requirements.md  player-automation-api-requirements.md  spike-game-read-requirements.md  src-layout-requirements.md
docs/plans/: 2026-04-09-001-refactor-src-layout-restructure-plan.md  2026-04-10-001-refactor-player-automation-api-plan.md  2026-04-10-002-refactor-event-derivation-replay-plan.md  2026-04-18-002-fix-python313-azure-functions-deployment-plan.md  2026-04-18-003-feat-migrate-flex-consumption-fc1-plan.md  2026-04-24-001-feat-spike-game-read-plan.md
docs/solutions/best-practices/: action-request-discriminated-union-player-automation-2026-04-10.md  engine-round-reconstruction-for-initial-hands-2026-04-24.md
docs/solutions/logic-errors/: game-rounds-action-replay-boundary-and-score-aggregation-bugs-2026-04-24.md  queue-action-hardcoded-player-id-assertion-2026-04-09.md  round-start-hands-lost-to-in-place-mutation-2026-04-11.md
docs/solutions/test-failures/: silent-assert-and-wrong-slice-in-test-helpers-2026-04-09.md
docs/solutions/tooling-decisions/: pylint-design-and-similarity-config-2026-04-25.md
functions/: bid.py  create_game.py  discard.py  events.py  game_info.py  invite_to_game.py  join_game.py  leave_game.py  play.py  players.py  rescind_prepass.py  search_games.py  search_users.py  select_trump.py  self.py  start_game.py  suggestion.py
models/client/: requests.py
src/auth/: depends.py
src/main/auth/: __init__.py  depends.py  firebase.py  google.py
src/main/repos/: __init__.py  mongo.py
src/main/routers/: games.py  lobbies.py  players.py
src/main/services/: __init__.py  game.py  lobby.py  player.py  user.py
src/mappers/client/: deserialize.py  serialize.py
src/mappers/db/: deserialize.py  serialize.py
src/models/client/: constants.py  requests.py  responses.py  shared.py
src/models/db/: game.py  player.py  setup.py
src/models/internal/: __init__.py  actions.py  constants.py  errors.py  game.py  player.py  round.py
src/routers/: __init__.py  games.py  lobbies.py  players.py
src/services/: game.py  lobby.py  player.py
src/tests/: conftest.py  helpers.py
src/tests/auth/: test_firebase.py  test_game_exception_handler.py  test_google.py
src/tests/decorators/: test_game_exception_handler.py
src/tests/functions/: conftest.py  test_game_events.py  test_lobby_game.py  test_login.py  test_playing_game.py  test_queued_action.py  test_retrieve_info.py
src/tests/mappers/: test_mapper_edge_cases.py
src/tests/services/: conftest.py  test_game_service.py  test_lobby_service.py  test_user_service.py
tests/: helpers.py
tests/auth/: test_firebase.py  test_game_exception_handler.py  test_google.py
tests/decorators/: test_game_exception_handler.py
tests/functions/: conftest.py  test_game_events.py  test_lobby_game.py  test_login.py  test_playing_game.py  test_queued_action.py  test_retrieve_info.py  test_spike_game.py
tests/mappers/: test_game_rounds.py  test_mapper_edge_cases.py  test_spike_serialize.py
tests/models/: test_db_models.py  test_player.py
tests/services/: test_game_service.py  test_lobby_service.py  test_user_service.py
utils/: __init__.py  constants.py  errors.py
utils/auth/: __init__.py  depends.py  google.py  identity.py
utils/decorators/: __init__.py  authentication.py  error_aggregation.py
utils/dtos/: client.py  db.py  requests.py  responses.py
utils/mappers/: constants.py
utils/mappers/client/: deserialize.py  serialize.py
utils/mappers/db/: deserialize.py  serialize.py
utils/mappers/shared/: deserialize.py
utils/models/: __init__.py  db.py  game.py  lobby.py  person.py
utils/parsers/: __init__.py  request.py
utils/routers/: __init__.py  games.py  lobbies.py  players.py  users.py
utils/services/: __init__.py  game.py  lobby.py  mongo.py  user.py
(+25 files in other folders)
