[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "hundredandtenserverless"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Seamus Lowry" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "azure-functions==2.1.0",
    "beanie==2.1.0",
    "cachecontrol==0.14.4",
    "fastapi==0.136.1",
    "google-auth==2.49.2",
    "hundredandten-automation-engineadapter==0.0.4",
    "hundredandten-automation-naive==0.0.4",
    "hundredandten-engine==0.0.6",
    "pymongo==4.17.0",
    "pyjwt==2.12.1",
    "requests==2.33.1",
]

[dependency-groups]
lint = [
    "pylint==4.0.5",
    "pyright==1.1.409",
    "ruff==0.15.12",
    "black==26.3.1",
]
test = [
    "coverage==7.13.5",
    "httpx==0.28.1",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
]

[tool.coverage.run]
branch = true
omit = [
    "tests/**"
]

[tool.setuptools.packages.find]
where = ["src"]
# tests/ is at repo root, outside the src/ scan boundary — no exclude needed

[tool.pyright]
useLibraryCodeForTypes = true

[tool.pylint.design]
# Beanie's Document class has 9 ancestors due to mixin interfaces
max-parents = 15
# Allow Settings/Config classes to have no methods (framework pattern)
min-public-methods = 0

[tool.pylint.similarities]
# Do not flag duplicate code in test files
ignore-paths = ["tests/.*"]

[tool.ruff]
target-version = "py314"
line-length = 100
lint.extend-select = ["I"]
lint.isort.combine-as-imports = true

[tool.black]
target-version = ["py314"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true