[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "hundredandtenserverless"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Seamus Lowry" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "azure-functions==2.1.0",
    "beanie==2.1.0",
    "cachecontrol==0.14.4",
    "fastapi==0.136.3",
    "google-auth==2.55.0",
    "hundredandten-automation-engineadapter==0.0.6",
    "hundredandten-automation-naive==0.0.6",
    "hundredandten-engine==0.0.7",
    "pymongo==4.17.0",
    "pyjwt==2.13.0",
    "requests==2.34.2",
]

[dependency-groups]
lint = [
    "pylint==4.0.5",
    "pyright==1.1.410",
    "ruff==0.15.16",
    "black==26.5.1",
]
test = [
    "coverage==7.14.1",
    "httpx==0.28.1",
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
]

[tool.coverage.run]
branch = true
omit = [
    "tests/**"
]

[tool.setuptools.packages.find]
where = ["src"]
# tests/ is at repo root, outside the src/ scan boundary — no exclude needed

[tool.pyright]
useLibraryCodeForTypes = true

[tool.pylint.design]
# Beanie's Document class has 9 ancestors due to mixin interfaces
max-parents = 15
# Allow Settings/Config classes to have no methods (framework pattern)
min-public-methods = 0

[tool.pylint.similarities]
# Do not flag duplicate code in test files
ignore-paths = ["tests/.*"]

[tool.ruff]
target-version = "py314"
line-length = 100
lint.extend-select = ["I"]
lint.isort.combine-as-imports = true

[tool.black]
target-version = ["py314"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true